--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 <p>
-Hello First Servlet</p>
+Hello </p>
+ <form action="../SERVLETJEE/Get4">
+  Pick number:<br>
+  <input type="text" name="param" style="width: 307px; ">
+  <br>
+  <br>
+   <input type="submit" value="Submit" style="width: 91px; height: 42px; ">
+</form> 
+<a href="/SERVLETJEE/Get5?company=coderslab&learn=php&learn=java&learn=ruby&learn=python" >Kliknij tutaj!</a>
 </body>
 </html>
